force-app/main/default/objects/Crew_Rest__c/Crew_Rest__c.object-meta.xml
<CustomObject>
    <label>Crew Rest</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Rest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>