force-app/main/default/objects/Crew_Rest__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Crew Rest</relationshipLabel>
    <relationshipName>Crew_Rest</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>