force-app/main/default/objects/Crew_Rest__c/fields/Flight_Time__c.field-meta.xml
<CustomField>
    <fullName>Flight_Time__c</fullName>
    <label>Flight Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>