force-app/main/default/objects/Crew_Rest__c/fields/Normal_Abnormal_Rest__c.field-meta.xml
<CustomField>
    <fullName>Normal_Abnormal_Rest__c</fullName>
    <label>Normal/Abnormal Rest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Location Abnormal</fullName>
            </value>
            <value>
                <fullName>Rest Time Abnormal</fullName>
            </value>
            <value>
                <fullName>Both Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>