force-app/main/default/objects/Crew_Rest__c/fields/Rest_Area__c.field-meta.xml
<CustomField>
    <fullName>Rest_Area__c</fullName>
    <label>Rest Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>On Ground</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>