force-app/main/default/objects/Crew_Rest__c/fields/Rest_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rest_End_Time__c</fullName>
    <label>Rest End Time</label>
    <type>Time</type>
</CustomField>