force-app/main/default/objects/Crew_Rest__c/fields/Rest_Location__c.field-meta.xml
<CustomField>
    <fullName>Rest_Location__c</fullName>
    <label>Rest Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bunk</fullName>
            </value>
            <value>
                <fullName>Crew Rest Seat</fullName>
            </value>
            <value>
                <fullName>Regular Seat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>