force-app/main/default/objects/Crew_Rest__c/fields/Rest_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Rest_Start_Time__c</fullName>
    <label>Rest Start Time</label>
    <type>Time</type>
</CustomField>