force-app/main/default/objects/Crew_Rest__c/fields/Type_of_Rest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rest__c</fullName>
    <label>Type of Rest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Crew Rest</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>